Change the structure of the mod